Fixes uneccessary gaps between sections

--- a/public/custom.css
+++ b/public/custom.css
@@ -15,7 +15,6 @@ body {
 }
 
 .main-section {
-  height: 100%;
   padding: 2em;
   text-align: center;
 }
